--- a/back/front/index.html
+++ b/back/front/index.html
@@ -42,7 +42,7 @@
       <div class="inner">
         <div class="header-container">
           <div class="title">
-            <a href="#">성공일정</a>
+            <a href="index.html">성공일정</a>
           </div>
           <div class="sign-container">
             <!-- 비회원 -->
