--- a/back/front/signUp.html
+++ b/back/front/signUp.html
@@ -41,7 +41,7 @@
       <div class="inner">
         <div class="header-container">
           <div class="title">
-            <a href="#">성공일정</a>
+            <a href="index.html">성공일정</a>
           </div>
           <div class="sign-container">
             <div class="unsigned">
